2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* generate_documentation.sh:
	Added --graphs all to generate diagrams etc.

2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* generate_documentation.sh:
	gnome-open started annoying me when the documentation was already open
	
	* api:
	Added svn:ignore so generated documentation doesn't show up in status.
	

2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Some indentation problem with Epydoc (literal command was not seen).

2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/api/api:
	Deleted API documentation, shouldn't be in the repo. We'll upload it
	somewhere later.

2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* generate_documentation.sh:
	* nautilussvn/api
	First generation of the Epydoc documentation.

2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/debug/ipython_view.py:
	* nautilussvn/lib/decorators.py:
	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/extensions/nautilus/__init__.py:
	* nautilussvn/lib/helper.py:
	* nautilussvn/lib/settings.py:
	* nautilussvn/lib/vcs/svn.py:
	* nautilussvn/ui/__init__.py:
	* nautilussvn/ui/about.py:
	* nautilussvn/ui/dialog.py:
	* nautilussvn/ui/unlock.py:
	Updated all docstrings and other inline documentation to conform to EpyDoc.

2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/helper.py:
	* nautilussvn/lib/settings.py:
	Replaced "dict" with "dictionary" for comments.

2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/helper.py:
	* nautilussvn/lib/settings.py:
	* nautilussvn/lib/vcs/svn.py:
	* nautilussvn/ui/callback.py:
	* nautilussvn/ui/commit.py:
	Updated all Epydoc comments to match the same style. See code review.

2008-12-31  Bruce van der Kooij  <brucevdkooij@gmail.com>
